[package]

name = "tiled"
version = "0.8.0"
description = "A rust crate for loading in maps created by the Tiled editor"
repository = "https://github.com/mattyhall/rs-tiled.git"
# documentation = "http://rust-ci.org/mattyhall/rs-tiled/doc/tiled/"
readme = "README.md"
license = "MIT"
authors = ["Matthew Hall <matthew@quickbeam.me.uk>"]
edition = "2018"
keywords = ["tiled", "tmx", "map"]

[lib]
name = "tiled"
path = "src/lib.rs"

[features]
default = []
serde = ["serde-crate"]

[[example]]
name = "example"
path = "examples/main.rs"

[dependencies]
base64  = "0.5.2"
xml-rs  = "0.3.0"
libflate = "0.1.18"
serde-crate = { version = "*", optional = true, package = "serde" }
