[package]

name = "tiled"
version = "0.8.0"
description = "A rust crate for loading in maps created by the Tiled editor"
repository = "https://github.com/mattyhall/rs-tiled.git"
# documentation = "http://rust-ci.org/mattyhall/rs-tiled/doc/tiled/"
readme = "README.md"
license = "MIT"
authors = ["Matthew Hall <matthew@quickbeam.me.uk>"]
edition = "2018"
keywords = ["tiled", "tmx", "map"]

[lib]
name = "tiled"
path = "src/lib.rs"

[features]
default = []
amethyst = ["amethyst_assets", "amethyst_error", "specs"]

[[example]]
name = "example"
path = "examples/main.rs"

[dependencies]
base64  = "0.5.2"
xml-rs  = "0.3.0"
libflate = "0.1.18"
amethyst_assets = {package = "amethyst_assets", git = "https://github.com/amethyst/amethyst", optional = true}
amethyst_error = {package = "amethyst_error", git = "https://github.com/amethyst/amethyst", optional = true}
specs = {version = "*", optional = true}